@@ -1,3 +1,11 @@
+2022-07-12 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
+
+	* src/SDCCsymt.c,
+	  support/regression/tests/bug-3456.c,
+	  support/regression/tests/bug-3459.c,
+	  support/regression/tests/bug-3460.c.in:
+	  Fix bug #3460.
+
 2022-07-11 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
 	* support/regression/tests/bug-3459.c:
